--- a/NotebookTraining.ipynb
+++ b/NotebookTraining.ipynb
@@ -69,7 +69,7 @@
     "SEQUENCE_LENGTH=50\n",
     "BATCH_SIZE=512\n",
     "FEATURES=7\n",
-    "FEATURES_PREDICTED=6\n",
+    "FEATURES_PREDICTED=5\n",
     "DISCARD=9"
    ]
   },
@@ -209,75 +209,7 @@
     "tags": []
    },
    "source": [
-    "### Physichs Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "972b1a10",
-   "metadata": {},
-   "source": [
-    "MLP Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49bc5a7d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "NAME=f\"MLP_DISCARD_{DISCARD}_DELTA\"\n",
-    "mlp_ph,history_mlp_ph=model_definitions.MLP_Train(gen_train,\n",
-    "                                                  gen_val,\n",
-    "                                                  learning_rate=0.0001,\n",
-    "                                                  epoch=1,\n",
-    "                                                  verbose=1,\n",
-    "                                                  name=NAME\n",
-    "                                                  ,path=f\"Prova\")\n",
-    "\n",
-    "ev=mlp_ph.evaluate(gen_test,verbose=0)\n",
-    "print(f\"Loss: {ev[0]} MAE: {ev[1]} Accuracy: {ev[2]}\")\n",
-    "#tf.saved_model.save(mlp_ph,f'saved_model/{NAME}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b767af9a",
-   "metadata": {},
-   "source": [
-    "CNN & LSTM Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "220477fd-dcf0-43ba-8a66-75e4d7745bca",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "units=32\n",
-    "kernel_size=1\n",
-    "filters=32\n",
-    "normalization=False\n",
-    "cnn_lstm,history_cnn_lstm=model_definitions.CNN_LSTM_Train(gen_train,gen_val,learning_rate=0.0001,patience=10,name=f\"CNN{filters}_{kernel_size}LSTM{units}_Norm{normalization}\",\n",
-    "                                                           path=\"logs_350SequenceLength\",epoch=10, dropout=0.2,units=units,kernel_size=kernel_size,\n",
-    "                                                           filters=filters, normalization=normalization,verbose=1\n",
-    "                                                          )\n",
-    "\n",
-    "ev=cnn_lstm.evaluate(gen_test,verbose=0)\n",
-    "print(f\"Loss: {ev[0]} MAE: {ev[1]} Accuracy: {ev[2]}\")\n",
-    "\n",
-    "tf.saved_model.save(cnn_lstm,f'saved_model/CNN_LSTM{units}_{kernel_size}_{filters}_PosAssoluta')"
+    "### Behaviour AI Engine Model"
    ]
   },
   {
